<resources>
    <string name="app_name">תיווך נסיעות</string>
    <string name="orderTravel">הזמן נסיעה</string>
    <string name="send">שלח</string>
    <string name="invalid_email">אנא הכנס כתובת מייל חוקית</string>
    <string name="password">סיסמה</string>
    <string name="mailAddress">כתובת מייל</string>
    <string name="or">או</string>
    <string name="invalid_password">"אנא הכנס 6 תווים (לועזית) לפחות אות אחת ומספר אחד"</string>
    <string name="createAccount">צור חשבון</string>
    <string name="login">התחבר</string>
    <string name="welcome">ברוכים הבאים</string>
    <string name="toBrokerage">ל תיווך נסיעות</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="costumer">הבקשות שלי</string>
    <string name="company">חברת ההסעה</string>
    <string name="owner">בעל האתר</string>
    <string name="Open">שלום</string>
    <string name="Close">סגור</string>
    <string name="confirm">אישור</string>

    <string-array name="status">
        <item>התקבלה הצעה</item>
        <item>התחלת נסיעה</item>
        <item>סיום נסיעה</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_mail">שלח מייל</string>
    <string name="confirmTravelByCostumer">נסיעה אושרה</string>
    <string name="numOfDays">סך ימי נסיעה</string>
    <string name="startDayOfTravel">תאריך יציאה</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_activity_perm">permActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_gps">GpsActivity</string>
    <string name="paid">שולם</string>
    <string name="select_menu_item">אנא בחר את התפריט הרצוי</string>

</resources>