<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/shadow_drawable"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/costumer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/address_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/destination_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/num_of_travelers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/num_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numOfDays"
            android:layout_margin="2dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/start_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startDayOfTravel"
            android:layout_margin="2dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_mail"
            android:shadowColor="@color/darker_gray"
            app:cornerRadius="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:shadowColor="@color/darker_gray"
            app:cornerRadius="10dp"/>

        <CheckBox
            android:id="@+id/check_box_company"
            android:layout_width="match_parent"
            android:clickable="false"
            android:layout_height="wrap_content"
            android:text="@string/confirmTravelByCostumer" />
    </LinearLayout>

</LinearLayout>