<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login2"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.loginActivity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/assistant_semibold"
        android:gravity="center"
        android:textColor="@color/orange"
        android:text="ברוכים הבאים"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_mail_ic"
        android:drawableLeft="@drawable/custom_mail_ic"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/mailAddress"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password"
        android:drawableLeft="@drawable/custom_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_massage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/assistant_semibold"
        android:gravity="center"
        android:textColor="@color/danger"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:shadowColor="@color/darker_gray"
        android:text="התחבר"
        app:cornerRadius="20dp"
        android:onClick="loginOnclick"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/assistant_semibold"
        android:gravity="center"
        android:textColor="@color/orange"
        android:text="@string/or"
        android:textSize="25sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:shadowColor="@color/darker_gray"
        android:text="צור חשבון"
        app:cornerRadius="20dp"
        android:onClick="createAccountOnClick"/>


</LinearLayout>